--- a/src/gui/SellerList.fxml
+++ b/src/gui/SellerList.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="388.0" prefWidth="440.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SellerListController">
+<VBox prefHeight="388.0" prefWidth="592.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SellerListController">
    <children>
       <Label text="Seller Registration">
          <font>
@@ -23,14 +23,17 @@
       </ToolBar>
       <TableView prefHeight="200.0" prefWidth="200.0">
         <columns>
-          <TableColumn fx:id="tableColumnId" prefWidth="75.0" text="Id" />
-          <TableColumn fx:id="tableColumnName" prefWidth="75.0" text="Name" />
-            <TableColumn fx:id="tableColumnEdit" prefWidth="75.0" />
-            <TableColumn fx:id="tableColumnRemove" prefWidth="75.0" />
+          <TableColumn fx:id="tableColumnId" prefWidth="42.0" text="Id" />
+          <TableColumn fx:id="tableColumnName" prefWidth="163.0" text="Name" />
+            <TableColumn fx:id="tableColumnEmail" prefWidth="90.0" text="Email" />
+            <TableColumn fx:id="tableColumnBirthDate" prefWidth="76.0" text="BirthDate" />
+            <TableColumn fx:id="tableColumnBaseSalary" prefWidth="69.0" text="BaseSalary" />
+            <TableColumn fx:id="tableColumnEdit" prefWidth="39.0" />
+            <TableColumn fx:id="tableColumnRemove" prefWidth="55.0" />
         </columns>
       </TableView>
    </children>
    <padding>
-      <Insets left="50.0" top="5.0" />
+      <Insets left="10.0" top="5.0" />
    </padding>
 </VBox>
