--- a/src/gui/DepartmentList.fxml
+++ b/src/gui/DepartmentList.fxml
@@ -9,28 +9,31 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="388.0" prefWidth="440.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.DepartmentListController">
-   <children>
-      <Label text="Department Registration">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font>
-      </Label>
-      <ToolBar prefHeight="40.0" prefWidth="200.0">
-        <items>
-          <Button fx:id="btNew" mnemonicParsing="false" onAction="#onBtNewAciont" text="New" />
-        </items>
-      </ToolBar>
-      <TableView prefHeight="200.0" prefWidth="200.0">
-        <columns>
-          <TableColumn fx:id="tableColumnId" prefWidth="75.0" text="Id" />
-          <TableColumn fx:id="tableColumnName" prefWidth="75.0" text="Name" />
-            <TableColumn fx:id="tableColumnEdit" prefWidth="75.0" />
-            <TableColumn fx:id="tableColumnRemove" prefWidth="75.0" />
-        </columns>
-      </TableView>
-   </children>
-   <padding>
-      <Insets left="50.0" top="5.0" />
-   </padding>
+<VBox maxHeight="-Infinity" maxWidth="-Infinity"
+	minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
+	prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1"
+	xmlns:fx="http://javafx.com/fxml/1">
+	<children>
+		<Label text="Department Registration">
+			<font>
+				<Font name="System Bold" size="14.0" />
+			</font>
+			<padding>
+				<Insets left="5.0" top="5.0" />
+			</padding>
+		</Label>
+		<ToolBar prefHeight="40.0" prefWidth="200.0">
+			<items>
+				<Button fx:id="btNew" mnemonicParsing="false" text="New" />
+			</items>
+		</ToolBar>
+		<TableView prefHeight="200.0" prefWidth="200.0">
+			<columns>
+				<TableColumn prefWidth="75.0" text="Id" />
+				<TableColumn prefWidth="75.0" text="Name" />
+				<TableColumn fx:id="tableColumnEdit" prefWidth="75.0" />
+				<TableColumn fx:id="tableColumnRemove" prefWidth="75.0" />
+			</columns>
+		</TableView>
+	</children>
 </VBox>
