--- a/src/gui/SellerList.fxml
+++ b/src/gui/SellerList.fxml
@@ -9,31 +9,31 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="388.0" prefWidth="592.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SellerListController">
+<VBox prefHeight="283.0" prefWidth="644.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SellerListController">
    <children>
       <Label text="Seller Registration">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
+         <padding>
+            <Insets left="5.0" top="5.0" />
+         </padding>
       </Label>
       <ToolBar prefHeight="40.0" prefWidth="200.0">
         <items>
-          <Button fx:id="btNew" mnemonicParsing="false" onAction="#onBtNewAciont" text="New" />
+          <Button fx:id="btNew" mnemonicParsing="false" onAction="#onBtNewAction" text="New" />
         </items>
       </ToolBar>
-      <TableView prefHeight="200.0" prefWidth="200.0">
+      <TableView fx:id="tableViewSeller" prefHeight="200.0" prefWidth="200.0">
         <columns>
-          <TableColumn fx:id="tableColumnId" prefWidth="42.0" text="Id" />
-          <TableColumn fx:id="tableColumnName" prefWidth="163.0" text="Name" />
-            <TableColumn fx:id="tableColumnEmail" prefWidth="90.0" text="Email" />
-            <TableColumn fx:id="tableColumnBirthDate" prefWidth="76.0" text="BirthDate" />
-            <TableColumn fx:id="tableColumnBaseSalary" prefWidth="69.0" text="BaseSalary" />
-            <TableColumn fx:id="tableColumnEdit" prefWidth="39.0" />
-            <TableColumn fx:id="tableColumnRemove" prefWidth="55.0" />
+          <TableColumn fx:id="tableColumnId" prefWidth="47.0" text="Id" />
+          <TableColumn fx:id="tableColumnName" prefWidth="159.0" text="Name" />
+            <TableColumn fx:id="tableColumnEmail" prefWidth="102.0" text="Email" />
+            <TableColumn fx:id="tableColumnBirthDate" prefWidth="72.0" text="Birth Date" />
+            <TableColumn fx:id="tableColumnBaseSalary" prefWidth="84.0" text="Base Salary" />
+            <TableColumn fx:id="tableColumnEDIT" prefWidth="58.0" />
+            <TableColumn fx:id="tableColumnREMOVE" prefWidth="57.0" />
         </columns>
       </TableView>
    </children>
-   <padding>
-      <Insets left="10.0" top="5.0" />
-   </padding>
 </VBox>
